# claude-review-guide

./: .gitignore  PROMPT.md  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: code_analyzer.py  orchestrator.py  uml_analyzer.py
backend/app/db/: database.py
backend/app/models/: __init__.py  analysis.py  uml.py
backend/app/routes/: analyze.py  analyze_repo.py  cache_routes.py  repo.py
backend/app/services/: cache.py  git.py  repo_scanner.py
frontend/: README.md  package-lock.json
frontend/src/app/: page.tsx
frontend/src/components/: FeatureGroupCard.tsx  RepoFileCard.tsx  ScopeSelector.tsx  ThreeColumnLayout.tsx  TopBar.tsx  TwoColumnLayout.tsx  UmlClassDiagram.tsx  UmlDiagram.tsx
frontend/src/db/: index.ts
frontend/src/hooks/: useAnalysis.ts  useScrollSync.ts
frontend/src/lib/: diff-parser.ts  git.ts  repo-scanner.ts
frontend/src/types/: index.ts
review-changes/: README.md
review-changes/.claude-plugin/: plugin.json
review-changes/agents/: diff-analyzer.md
review-changes/commands/: review-changes.md
review-changes/skills/review/: SKILL.md
src/app/: layout.tsx  page.tsx
src/components/: AnnotationCard.tsx  ColumnResizer.tsx  DiffView.tsx  FeatureGroupCard.tsx  FileContentView.tsx  FileTreeView.tsx  ScopeSelector.tsx  ScrollSyncToggle.tsx  SearchBar.tsx  TabBar.tsx  TopBar.tsx
src/db/: index.ts  schema.ts
src/hooks/: useAnalysis.ts  useResizableColumns.ts  useResizableSidebar.ts
src/lib/: cache.ts  claude.ts  repo-scanner.ts
src/types/: index.ts
(+10 files in other folders)
